maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:24: error: ':' expected but ')' found.
def isDirectionFree(dir) : Boolean = {
                       ^Escaper:36: error: identifier expected but '}' found.
}
^